--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^3.10.0",
     "mongoose": "^4.0.6",
     "morgan": "~1.3.0",
+    "multer": "^1.0.3",
     "q": "^1.4.1",
     "request": "^2.51.0",
     "serve-favicon": "~2.1.3"
